Process is going... Fonts are correctly added.

--- a/src/pages/common/footer.pug
+++ b/src/pages/common/footer.pug
@@ -1,2 +1,12 @@
 footer
-    p Footer
+    p #visitSEDONA
+    ul
+      li
+        img(src="img/icon-twitter.svg" alt="Лого Твиттера")
+      li
+        img(src="img/icon-facebook.svg" alt="Лого Фейсбука")
+      li
+        img(src="img/icon-youtube.svg" alt="Лого Ютуба")
+    p Разработано
+      img(src="img/htmlacademy.svg" alt="Лого htmlacademy")
+
