--- a/src/pages/common/header.pug
+++ b/src/pages/common/header.pug
@@ -1,2 +1,13 @@
-header
-  p Header
+header.header
+  img(src='img/logotype.svg' alt='Logotype of Sedona' width='102' height='85').header__logo
+  nav.header__nav.nav-menu
+    ul.nav-menu__list
+      li.nav-menu__item.nav-menu__item Главная
+      li.nav-menu__item.nav-menu__item Фото и видео
+      li.nav-menu__item.nav-menu__item--right Форма отзыва
+      li.nav-menu__item.nav-menu__item HTML Academy
+    button(aria-label="Меню").nav-menu__switcher
+      img(src="img/icon-menu.svg"
+          width="23"
+          height="22"
+          alt="Иконка гамбургер")
