--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,5 +1,11 @@
 // Mobile first
 $mediaWidthMobile: 320px;
 $mediaWidthTablet: 768px;
-$mediaWidthTabletHorizontal: 1024px;
 $mediaWidthLaptop: 1366px;
+
+// Colors
+$sedona-white: #ffffff;
+$sedona-blue: #81b3d2;
+$sedona-freespace: #e7e5e5;
+$sedona-black: #000000;
+$sedona-dark: #333333;
