--- a/src/pages/common/header.pug
+++ b/src/pages/common/header.pug
@@ -1,5 +1,5 @@
 header.header
-  img(src='img/logotype.svg' alt='Logotype of Sedona' width='102' height='85').header__logo
+  img(src='img/logo-sedona-mobile.svg' alt='Logotype of Sedona' width='102' height='85').header__logo
   nav.header__nav.nav-menu
     ul.nav-menu__list
       li.nav-menu__item.nav-menu__item Главная
