--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -5,51 +5,53 @@ block content
     h1.visually-hidden Седона
     section.welcome
       h2.visually-hidden Добро пожаловать в великолепную Седону
-      div.welcome__cover
-        img(src="img/welcome.svg" alt="Логотип Because Grand Canyon sucks").welcome__logo
+      div.test
+        div.welcome__cover
+          img(src="img/text-sedona-index.svg" width="282" height="214" alt="Логотип Because Grand Canyon sucks").welcome__logo
+          div.welcome__cover-triangle
     section.reasons
       div.reasons__wrapper
         h2.reasons__header СЕДОНА — небольшой городок в Аризоне, заслуживающий большего!
         p.reasons__text Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
-      ul
-        li
-          article
-            div
-              p НАСТОЯЩИЙ ГОРОДОК
+      ul.reasons__list
+        li.reasons__area--area-a
+          article.reason
+            div.reason__description
+              h3 НАСТОЯЩИЙ ГОРОДОК
               p - №1 -
               p СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ
-            div
-              img(src="img/photo-city1.jpg" alt="Городской вид")
-            div
+            div.reason__cover
+              img(src="img/main-city-mobile@2x.jpg" alt="Городской вид")
+            div.reason__highlights
               ul
                 li Жилье Рекомендуем пожить в настоящем мотеле, все как в кино!
                 li СУВЕНИРЫ Не только китайского, но и местного производства!
                 li ЕДА Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!
-        li
-          article
-            div
-              p ТАМ ЕСТЬ Мост дьявола
+        li.reasons__area--area-b
+          article.reason
+            div.reason__description
+              h3 ТАМ ЕСТЬ Мост дьявола
               p — №2 —
               p Да, по нему можно пройти! Если вы осмелитесь, конечно
-            div
-              img(src="img/photo-bridge.png" alt="Вид на каньон")
+            div.reason__cover
+              img(src="img/photo-bridge-desktop@1x.jpg" alt="Вид на каньон")
 
-        li
-          article
-            div
-              p НЕБОЛЬШАЯ ПЛОЩАДЬ
+        li.reasons__area--area-c
+          article.reason
+            div.reason__description.reason__description--other
+              h3 НЕБОЛЬШАЯ ПЛОЩАДЬ
               p — №3 —
               p ВСЕ интересные места находятся очень близко
-        li
-          article
-            div
-              p КРАСИВАЯ ДОРОГА
+        li.reasons__area--area-d
+          article.reason
+            div.reason__description
+              h3 КРАСИВАЯ ДОРОГА
               p — №4 —
               p ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!
-        li
-          article
-            div
-              p МАЛО ТУРИСТОВ
+        li.reasons__area--area-e
+          article.reason
+            div.reason__description
+              h3 МАЛО ТУРИСТОВ
               p — №5 —
               p Большинство едет в гранд каньон и толпится там
     section
