--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,9 +1,13 @@
 @import "common/global";
 
+@import "common/helpers";
+
 @import "common/header";
 
 @import "common/welcome";
 
 @import "common/reasons";
+
+@import "common/hotels";
 
 @import "common/footer";
