--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -4,57 +4,74 @@ block content
   main.main
     h1.visually-hidden Седона
     section.welcome
-      h2.visually-hidden Добро пожаловать в великолепную Седону
-      div.welcome__cover
+      h2.welcome__header.visually-hidden Добро пожаловать в великолепную Седону
+      div.welcome__cover.container--expand
         img(src="img/text-sedona-index.svg" width="282" height="214" alt="Логотип Because Grand Canyon sucks").welcome__logo
         div.welcome__cover-triangle
     section.reasons
-      div.reasons__wrapper
+      div.reasons__header-wrapper
         h2.reasons__header СЕДОНА — небольшой городок в Аризоне, заслуживающий большего!
-        p.reasons__text Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
-      ul.grid-3col
-        li.grid-3col__area
+        p.reasons__lead Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
+      ul.reasons__list.grid-3col
+        li.grid-3col__row.reasons__list--featured
           article.grid-3col.reason
-            div.grid-3col__area.grid-3col__area--1of3.text-card
-              div.text-card__wrapper
-                h3.text-card__header Настоящий городок
-                p.text-card__number - №1 -
-                p.text-card__description Седона не аттракцион для туристов, там течёт своя жизнь
-            div.grid-3col__area.grid-3col__area--2of3.picture-card
+            div.text-card.text-card--first.container--expand.grid-3col__row--1of3
+              h3.text-card__header Настоящий городок
+              p.text-card__number — №1 —
+              p.text-card__description Седона не аттракцион для туристов, там течёт своя жизнь
+            div.grid-3col__row--2of3.picture-card.container--expand
               img(src="img/main-city-mobile@2x.jpg" alt="Городской вид").picture-card__image
-            div.grid-3col__area.reason__highlights
-              ul
-                li Жилье Рекомендуем пожить в настоящем мотеле, все как в кино!
-                li СУВЕНИРЫ Не только китайского, но и местного производства!
-                li ЕДА Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!
-        li.grid-3col__area
+            div.highlights.grid-3col__row
+              ul.highlights__list.grid-3col
+                li.highlights_item.grid-3col__row--1of3
+                  h4.highlights_item__header Жилье
+                  img(src="img/icon-house.svg" alt="Иконка домик" width="39").highlights_item__icon.highlights_item__icon--house
+                  p.highlights_item__lead Рекомендуем пожить в настоящем мотеле, все как в кино!
+                li.highlights_item.grid-3col__row--1of3
+                  h4.highlights_item__header Сувениры
+                  img(src="img/icon-gift.svg" alt="Иконка подарок" width="32").highlights_item__icon.highlights_item__icon--gift
+                  p.highlights_item__lead Не только китайского, но и местного производства!
+                li.highlights_item.grid-3col__row--1of3
+                  h4.highlights_item__header Еда
+                  img(src="img/icon-burger.svg" alt="Иконка бургер" width="40").highlights_item__icon.highlights_item__icon--burger
+                  p.highlights_item__lead Всегда заказывайте фирменный бургер, вы не разочаруетесь!
+        li.grid-3col__row.reasons__list--featured
           article.grid-3col.reason
-            div.grid-3col__area.grid-3col__area--1of3.text-card
-                h3.text-card__header Там есть Мост дьявола
-                p.text-card__number — №2 —
-                p.text-card__description Да, по нему можно пройти! Если вы осмелитесь, конечно
-            div.grid-3col__area.grid-3col__area--2of3.grid-3col__area--gofirst.picture-card
+            div.grid-3col__row.grid-3col__row--1of3.text-card
+              h3.text-card__header Там есть Мост дьявола
+              p.text-card__number — №2 —
+              p.text-card__description Да, по нему можно пройти! Если вы осмелитесь, конечно
+            div.grid-3col__row.grid-3col__row--2of3.grid-3col__row--gofirst.picture-card
               img(src="img/photo-bridge-desktop@1x.jpg" alt="Вид на каньон").picture-card__image
-
-        li.grid-3col__area.grid-3col__area--1of3
+        li.grid-3col__row--1of3.reasons__list--general
           article.reason
-            div.text-card.text-card--other
-              div.text-card__wrapper
-                h3.text-card__header НЕБОЛЬШАЯ ПЛОЩАДЬ
-                p.text-card__number — №3 —
-                p.text-card__description ВСЕ интересные места находятся очень близко
-        li.grid-3col__area.grid-3col__area--1of3
+            div.text-card__wrapper
+              h3.text-card__header НЕБОЛЬШАЯ ПЛОЩАДЬ
+              p.text-card__number — №3 —
+              p.text-card__description ВСЕ интересные места находятся очень близко
+        li.grid-3col__row--1of3.reasons__list--general
           article.reason
-            div.text-card.text-card--other
-              div.text-card__wrapper
-                h3.text-card__header КРАСИВАЯ ДОРОГА
-                p.text-card__number — №4 —
-                p.text-card__description ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!
-        li.grid-3col__area.grid-3col__area--1of3
+            div.text-card__wrapper
+              h3.text-card__header КРАСИВАЯ ДОРОГА
+              p.text-card__number — №4 —
+              p.text-card__description ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!
+        li.grid-3col__row--1of3.reasons__list--general
           article.reason
-            div.text-card.text-card--other
+            div.text-card__wrapper
               h3.text-card__header МАЛО ТУРИСТОВ
               p.text-card__number — №5 —
               p.text-card__description Большинство едет в гранд каньон и толпится там
-    section
-      h2 Лучшие предложения гостиниц в Седоне
+    section.hotels
+      div.hotels__headers-wrapper
+        h2.hotels__header Заинтересовались?
+        p.hotels__lead Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
+        button.hotels__button Найти гостиницу
+      div.hotels__map-wrapper.container--expand
+        picture
+          source(media='(min-width: 1200px)' srcset='img/bg-map-desktop@1x.jpg')
+          source(media='(min-width: 768px)' srcset='img/bg-map-tablet@1x.jpg')
+          img(src='img/bg-map-mobile@1x.jpg' srcset='img/bg-map-mobile@1x.jpg' alt='Logotype of Sedona' )
+        img(src='img/icon-map-marker.svg' alt='Маркер на карте' ).hotels__map-marker
+
+
+
