--- a/src/styles/common/footer.scss
+++ b/src/styles/common/footer.scss
@@ -1,3 +1,87 @@
+@import "../mixins/media";
+
 .footer {
-  border: 1px solid red;
+  background-color: $sedona-white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 233px;
+
+  @include media-tablet {
+    height: 120px;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+.footer__hashtag {
+  margin-top: 30px;
+}
+
+.footer__socials {
+  margin-top: 32px;
+}
+
+.footer__copyright {
+  margin-top: 25px;
+}
+
+.hashtag {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 21px;
+  line-height: 26px;
+  text-transform: uppercase;
+  color: $sedona-black;
+  mix-blend-mode: normal;
+}
+
+.social-list {
+  padding-left: 0;
+  display: grid;
+  grid-gap: 6px;
+  grid-template-columns: 46px 46px 46px;
+  grid-template-rows: 48px;
+  list-style: none;
+}
+
+.social-link {
+  color: #eeeeee;
+  width: 100%;
+  height: 100%;
+  background: $sedona-blue;
+  mix-blend-mode: normal;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-link__img {
+  fill: $sedona-white;
+
+  &:hover {
+    fill: $sedona-black;
+  }
+}
+
+.copyright {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.copyright__text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 26px;
+  text-transform: uppercase;
+  color: $sedona-black;
+  mix-blend-mode: normal;
+}
+
+.copyright__logo {
+  height: 34px;
+  width: 27px;
+  margin-left: 12px;
 }
