--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -16,9 +16,17 @@ html {
 
 body {
   min-width: 320px;
-  margin: 0;
+  width: 100%;
   font-family: "PT Sans", sans-serif;
   background-color: $sedona-freespace;
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
 }
 
 img {
@@ -27,22 +35,4 @@ img {
 
 a {
   text-decoration: none;
-}
-
-ul {
-  margin: 0;
-}
-
-.container {
-  min-width: 320px;
-  max-width: 768px;
-  margin: 0 auto;
-}
-
-.visually-hidden {
-  position: absolute;
-  clip: rect(0 0 0 0);
-  width: 1px;
-  height: 1px;
-  margin: -1px;
 }
