--- a/src/styles/common/welcome.scss
+++ b/src/styles/common/welcome.scss
@@ -7,29 +7,55 @@
   background-color: $sedona-white;
 }
 
+.welcome__header {}
+
 .welcome__cover {
+  position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
   background-color: $sedona-blue;
   background-clip: border-box;
   background-image: url("/img/bg-back-mobile@1x.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center bottom;
-  margin: 0 0 0 0;
+  height: 389px;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("/img/bg-back-mobile@2x.jpg");
+  }
+
+  @include media-tablet {
+    background-image: url("/img/bg-back-tablet@1x.jpg");
+    background-size: 768px auto;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("/img/bg-back-tablet@2x.jpg");
+    }
+  }
+
+  @include media-desktop {
+    background-image: url("/img/bg-back-desktop@1x.jpg");
+    background-size: 1200px auto;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("/img/bg-back-desktop@2x.jpg");
+    }
+  }
 }
 
 .welcome__cover-triangle {
   position: absolute;
   width: 100%;
   height: 70px;
-  bottom: -4px;
+  bottom: -15px;
   display: inline-block;
-  background: url("/img/bg-intro-triangle-tablet.svg") no-repeat center bottom;
+  background: url("/img/bg-intro-triangle-desktop-bottom.svg") no-repeat center bottom;
   border-bottom: 5px $sedona-white solid;
 }
 
 .welcome__logo {
   display: block;
-  margin: 90px auto 84px;
+  margin-top: 90px;
 }
