--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,7 +1,8 @@
 // Mobile first
 $mediaWidthMobile: 320px;
 $mediaWidthTablet: 768px;
-$mediaWidthLaptop: 1366px;
+$mediaWidthDesktop: 1200px;
+$mediaWidthOnlyMobile: $mediaWidthTablet - 1px;
 
 // Colors
 $sedona-white: #ffffff;
@@ -10,4 +11,6 @@ $sedona-freespace: #e7e5e5;
 $sedona-black: #000000;
 $sedona-dark: #333333;
 $sedona-gray: #eeeeee;
+$sedona-more-gray: #d6d6d6;
+
 
